--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "learn-about-me",
   "private": true,
   "scripts": {
-    "start": "forever app"
+    "start": "node app.js"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -12,7 +12,6 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
-    "forever": "^0.15.3",
     "mongoose": "^4.11.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
